# Poker-Ai

./: CMakeLists.txt  main.cpp
src/GUI/cpp/: MainWindow.cpp  PokerSettingsPage.cpp  PokerWindow.cpp  pokerwindow.cpp  settingswindow.cpp
src/GUI/header/: MainWindow.h  PokerSettingsPage.h  PokerWindow.h  pokerwindow.h  settingswindow.h
src/GUI/ui/: MainWindow.ui  PokerWindow.ui  settingswindow.ui
src/cpp/: Card.cpp  Player.cpp  Poker.cpp
src/enums/: CardUtils.cpp
src/header/: Card.h  Player.h  Poker.h  Round.h
src/utils/: CardUtils.h
